# pymol-remote

./: .env.sample  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  contribute.sh  demo.ipynb  environment.yml  license.txt  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
src/pymol_remote/: __init__.py  cli.py  client.py  common.py  server.py  style.py
src/pymolrpc/: __init__.py  client.py  common.py  server.py  version.py
tests/: _biotite_utils.py  conftest.py  test_client.py  test_init.py  test_server.py
